--- a/templates/include1.html
+++ b/templates/include1.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="div1">
-<div class="div1-1">
-</div>
+<a href="/"><div class="div1-1">
+</div></a>
 <div class="div1-2">
 <a href="/">Home</a>
 <a href="{% url 'about' %}">About me</a>
