--- a/templates/contact.html
+++ b/templates/contact.html
@@ -36,7 +36,7 @@
     {% for x in social %}
     <div class='icons'>
     <img src="media/{{x.img}}" alt="img">
-    <h4><a href="https://www.linkedin.com/in/krishan-kant-sharma-452521204/" target="_blank">{{x.name}}</a></h4>
+    <h4><a href="{{x.link}}" target="_blank">{{x.name}}</a></h4>
     </div>
     
     {% endfor %}
