--- a/templates/about.html
+++ b/templates/about.html
@@ -59,7 +59,7 @@
         <div class="contain">
         {% for item in edu %}
         <div class="edu">
-        <div class="inline">
+        <div class="image">
         <img src="media/{{item.image}}" alt="">
         </div>
         <div class="inline">
