--- a/static/css/about.css
+++ b/static/css/about.css
@@ -35,8 +35,8 @@
     text-align: center;
 }
 .item img{
-    width: 320px;
-    height: 380px;
+    width: 300px;
+    height: 356px;
 }
 .item .heading{
     margin-bottom: 30px;
@@ -91,26 +91,32 @@
 
 @media screen and (max-width:450px){
     .container{
-        width:300px;
-        height: 1000px;
+        width:100%;
+    }
+    .item{
+        width: 100%;
     }
     .item img{
-        width: 300px;
-        height: 350px;
+        width: 98%;
+        height: auto;
     }
     .percent{
         width: 100px;
         height: 20px;
     }
     .edu{
-        width: 300px;
+        width: 100%;
     }
     .edu img{
-        width: 80px;
-        height: 80px;
-    
+        width: 100%;
+        height: auto;
+        
     }
     .div2 img {
         display: none;
     }
+    .image{
+        width: 50%;
+        height: auto;
+    }   
 }
