--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -24,6 +24,7 @@
 .div_form{
     margin-left: 30px;
     width: 380px;
+    
 }
 .div_form h1{
     color: white;
@@ -160,18 +161,20 @@
 @media screen and (max-width:500px){
     
     .form{
-        width:300px;
+        width:98%;
+        margin: auto;
     }
     .div_form{
         margin:0 auto;
-        width: auto;
+        padding: 0 2%;
+        width: 100%;
     }
     .input{
         outline: none;
         background: transparent;
         border: none;
         border-bottom: 2px solid white;
-        width: 300px;
+        width: 100%;
         height: 40px;
     }
     .texteria{
